--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "My Impact",
-  "name": "My Impact | SDG for everyone",
+  "short_name": "Reach 17",
+  "name": "Reach 17 | SDG for everyone",
   "icons": [
     {
       "src": "favicon.ico",
