--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -22,5 +22,13 @@
     "mongoose": "^7.2.1",
     "nodemon": "^2.0.22",
     "xss-clean": "^0.1.4"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "jest": "^29.6.1",
+    "mocha": "^10.2.0",
+    "rewire": "^6.0.0",
+    "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0"
   }
 }
