--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "nodemon app.js"
+    "build": "node app.js"
   },
   "author": "",
   "license": "ISC",
