--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "reach17-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest",
     "build": "node app.js"
